<resources>
    <string name="app_name">Perfect Playlist</string>
    <string name="button_replay">replay</string>
    <string name="button_pause">pause</string>
    <string name="button_skip">skip</string>
    <string name="voice_status">status</string>
    <string name="voice_content">content</string>
    <string name="search_button">search</string>
    <string name="content_description_album_cover">album cover</string>
    <string name="content_description_heart">heart</string>
    <string name="placeholder_artist">Artist</string>
    <string name="placeholder_album">Album</string>
    <string name="placeholder_song">Song</string>
    <string name="content_description_button_microphone">This is a button in the shape of a microphone</string>
    <string name="content_description_microphone_button">microphone</string>
    <string name="instructions_question">What do you want to hear today?</string>
    <string name="title_activity_main_test">MainTestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
